--- a/DoAnMon/Views/Shared/_LoginPartial.cshtml
+++ b/DoAnMon/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<CustomUser> SignInManager
 @inject UserManager<CustomUser> UserManager
-@inject SignInManager<CustomUser> _signInManager;
+@inject SignInManager<CustomUser> _signInManager
 
 <style>
     /* Chỉnh lại dropdown menu thành menu dọc và đẩy xuống phía dưới */
