--- a/DoAnMon/Views/Shared/_Layout1.cshtml
+++ b/DoAnMon/Views/Shared/_Layout1.cshtml
@@ -20,7 +20,7 @@
 	<!--CUSTOM MAIN STYLES-->
 	<link href="/assets/css/custom.css" rel="stylesheet" />
 	<!-- GOOGLE FONTS-->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 
 	<link rel="icon" href="/pics/exam.ico" type="image/x-icon">
 
@@ -127,7 +127,7 @@
 	<!-- /. WRAPPER  -->
 
 	<div id="footer-sec" style="text-align: center;">
-		&copy; 2014 YourCompany | Design By : <a href="http://www.binarytheme.com/" target="_blank">ONLYA</a>
+		&copy; 2024 ONLYA | Design By : <a href="http://www.binarytheme.com/" target="_blank">ONLYA</a>
 	</div>
 	<!-- /. FOOTER  -->
 	<!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
