Join phòng bằng mã nhưng chưa tắt form join được

--- a/DoAnMon/Views/ClassRooms/Create.cshtml
+++ b/DoAnMon/Views/ClassRooms/Create.cshtml
@@ -57,11 +57,11 @@
                                 <div class="modal-body">
                                     <div class="col-md-12" style="width: 100%">
                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                            <div class="form-group">
+                                            @* <div class="form-group" >
                                                 <label for="Id" class="control-label">Mã lớp:</label>
                                                 <input name="Id" id="Id" class="form-control custom-input-width" required />
                                                 <span id="IdError" class="text-danger"></span>
-                                            </div>
+                                            </div> *@
                                             <div class="form-group">
                                                 <label for="Name" class="control-label">Tên lớp:</label>
                                                 <input name="Name" id="Name" class="form-control custom-input-width" required />
