--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -2,31 +2,34 @@
 @model List<ClassRoomViewModel>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
 <div class="content">
-    @{
-        foreach (var viewModel in Model)
-        {
-            <div class="classroom">
-                <div class="card-top" style="background-image: url(/Images/footer_bg.png);">
-                    <h2>@viewModel.ClassRoom.Name</h2>
-                    <div class="meta">@viewModel.ClassRoom.Description</div>
-                    <p style="padding-top: 3%;">@viewModel.Owner.Name</p>
-                </div>
-                <div class="card-bottom">
-                    <img class="PNzAWd" aria-hidden="true" src="/Imgs_avtUser/@viewModel.Owner.UrlAvt">
-                    <a href="https://lop.com" class="btn btn-primary btn-info btn-custom" target="_blank">Giảng đường</a>
-                    <a asp-action="Details" asp-route-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" style="margin-top: 10px;">Lớp học</a>
-                </div>
-            </div>
-        }
-    }   
+	@{
+		if (Model != null)
+		{
+			foreach (var viewModel in Model)
+			{
+				<div class="classroom">
+					<div class="card-top" style="background-image: url(/Images/footer_bg.png);">
+						<h2>@viewModel.ClassRoom.Name</h2>
+						<div class="meta">@viewModel.ClassRoom.Description</div>
+						<p style="padding-top: 3%;">@viewModel.Owner.Name</p>
+					</div>
+					<div class="card-bottom">
+						<img class="PNzAWd" aria-hidden="true" src="/Imgs_avtUser/@viewModel.Owner.UrlAvt">
+						<a href="https://lop.com" class="btn btn-primary btn-info btn-custom" target="_blank">Giảng đường</a>
+						<a asp-action="Details" asp-route-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" style="margin-top: 10px;">Lớp học</a>
+					</div>
+				</div>
+			}
+		}
+	}
 </div>
 
 @if (!string.IsNullOrEmpty(ViewBag.StatusMessage))
 {
-    <script>alert('@ViewBag.StatusMessage');</script>
+	<script>alert('@ViewBag.StatusMessage');</script>
 }
